--- a/.env
+++ b/.env
@@ -1,7 +1,11 @@
-REDIS__HOST = "192.168.1.2"
+REDIS__HOST = "84.201.132.21"
 REDIS__PORT = 6379
+REDIS_OM_URL = "redis://84.201.132.21:6379"
 
-RABBITMQ__HOST = "192.168.1.2"
+RABBITMQ__HOST = "84.201.132.21"
 RABBITMQ__PORT = 5673
 RABBITMQ__USERNAME = "ml_processing"
 RABBITMQ__PASSWORD = "1234"
+
+DETECTOR__MODEL = 'models/yolov8n.pt'
+ENCODER__MODEL = 'models/RN50.pt'
