--- a/services/encoder/Dockerfile
+++ b/services/encoder/Dockerfile
@@ -1,10 +1,14 @@
 FROM pokroy/python-cuda:3.10-12.1
 
+RUN apt-get install git -y
+
 WORKDIR /home
 
 COPY ./requirements.txt .
 
 RUN pip3 install --no-cache-dir -r requirements.txt
+
+RUN pip3 install git+https://github.com/openai/CLIP.git
 
 COPY . .
 
