+ monitoring, class hierarchy, bug fixes

--- a/.env
+++ b/.env
@@ -1,11 +1,10 @@
-REDIS__HOST = "84.201.132.21"
-REDIS__PORT = 6379
-REDIS_OM_URL = "redis://84.201.132.21:6379"
+REDIS__HOST="0.0.0.0"
+REDIS__USERNAME="worker"
+REDIS__PASSWORD="worker"
 
-RABBITMQ__HOST = "84.201.132.21"
-RABBITMQ__PORT = 5673
-RABBITMQ__USERNAME = "ml_processing"
-RABBITMQ__PASSWORD = "1234"
+RABBITMQ__HOST="0.0.0.0"
+RABBITMQ__ML_PROCESSING_USERNAME = "ml_processing"
+RABBITMQ__ML_PROCESSING_PASSWORD = "ml_processing"
 
 DETECTOR__MODEL = 'models/yolov8n.pt'
-ENCODER__MODEL = 'models/RN101.pt'
+ENCODER__MODEL = 'openai/clip-vit-base-patch32'
