--- a/services/encoder/requirements.txt
+++ b/services/encoder/requirements.txt
@@ -1,18 +1,22 @@
 async-timeout==4.0.2
-cffi==1.15.1
-click==8.1.3
-cryptography==41.0.1
-hiredis==2.2.3
-more-itertools==8.14.0
+certifi==2023.5.7
+charset-normalizer==3.1.0
+filelock==3.12.0
+fsspec==2023.6.0
+huggingface-hub==0.15.1
+idna==3.4
 numpy==1.24.3
+packaging==23.1
 pika==1.3.2
-Pillow==9.5.0
-pptree==3.1
-pycparser==2.21
-pydantic==1.10.8
-python-ulid==1.1.0
+prometheus-client==0.17.0
+pydantic==1.10.9
+PyYAML==6.0
 redis==4.5.5
-redis-om==0.1.2
-types-pyOpenSSL==23.2.0.0
-types-redis==4.5.5.2
-typing_extensions==4.6.2
+regex==2023.6.3
+requests==2.31.0
+safetensors==0.3.1
+tokenizers==0.13.3
+tqdm==4.65.0
+transformers==4.30.1
+typing_extensions==4.6.3
+urllib3==2.0.3
